--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"anlutro\\LaravelMenu\\": "src/"
+			"anlutro\\Menu\\": "src/"
 		}
 	},
 	"minimum-stability": "stable"
