--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ php:
   - hhvm
 
 before_script:
-  - curl -s http://getcomposer.org/installer | php
-  - php composer.phar install --dev
+  - composer self-update
+  - composer install --dev --no-interaction
 
 script: phpunit
