--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,6 @@ php:
   - 5.6
   - hhvm
 
-before_script:
-  - composer self-update
-  - composer install --dev --no-interaction
+install: composer install --dev --prefer-dist
 
 script: phpunit
