--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,7 @@
 		}
 	],
 	"require": {
-		"php": ">=5.4.0",
-		"illuminate/support": "~4.1",
-		"patchwork/utf8": "1.1.*"
+		"php": ">=5.4.0"
 	},
 	"require-dev": {
 		"mockery/mockery": "0.9.*"
