--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,8 @@ php:
   - 5.6
   - 7.0
   - hhvm
-  - hhvm-nightly
 
-matrix:
-  allow_failures:
-    - php: 7.0
-    - php: hhvm-nightly
-
-install: composer install --dev --prefer-dist
+install: composer install --prefer-dist
 
 script: phpunit
 
