--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 		"php": ">=5.4.0"
 	},
 	"require-dev": {
-		"mockery/mockery": "0.9.*"
+		"phpunit/phpunit": "*"
 	},
 	"autoload": {
 		"psr-4": {
