--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: php
 
-php: 
+php:
   - 5.4
   - 5.5
   - 5.6
@@ -9,6 +9,6 @@ php:
 
 install: composer install --prefer-dist
 
-script: phpunit
+script: vendor/bin/phpunit
 
 sudo: false
